--- a/.github/workflows/space.yml
+++ b/.github/workflows/space.yml
@@ -42,4 +42,4 @@ jobs:
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: git push https://helenai:$HF_TOKEN@huggingface.co/spaces/helenai/check-optimum-intel-support main
+        run: git push --force https://helenai:$HF_TOKEN@huggingface.co/spaces/helenai/check-optimum-intel-support main
